# Trader

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/: README.md
docs/: 4.x_Reflection_介绍.md  RAG_问题分析.md  层级式多资产交易系统评估.md  报告.md  数据库.md  评估与建议.md
experiments/1.1 DCA with AAPL.O/: README.md  main.py
experiments/1.2.1 Logistic with Higher Position/: main.py
experiments/1.2.2 Logistic with Higher Position and Risk Control/: main.py
experiments/1.2.3 Logistic with LLM Risk Control/: main.py
experiments/1.3.0 Chasing Extremes with AAPL.O/: README.md  main.py
experiments/1.3.1 Chasing Extremes with Leverage Risk Control/: README.md  main.py
experiments/1.3.1 LLM Risk Control with AAPL.O/: main.py
experiments/1.3.1 Logistic with Higher Position/: main.py
experiments/1.3.2 Chasing Extremes with Position Scaling/: README.md  main.py
experiments/1.3.2 Logistic with Higher Position and Risk Control/: main.py
experiments/1.3.3 Logistic with LLM Risk Control/: main.py
experiments/1.3.4 Logistic with RAG Risk Control/: main.py
experiments/1.4.1 Chasing Extremes/: main.py
experiments/1.4.1 Logistic with Higher Position/: main.py
experiments/1.4.2 Chasing Extremes with Leverage Risk Control/: main.py
experiments/4.1 RAG Agent/: README.md  (+1 more)
script/: 0. init_db.sh  1. prepare_news.sh  2. run experiment.sh  2. run.sh  3. train Predictor.sh  A. visualize features.sh  C. visualize Predictor.sh  D. top K news.sh  logout_wandb.sh  run_experiment.py
trader/: __init__.py  config.py  config.toml  config_loader.py  logger.py  main.py
(+188 files in other folders)
