[project]
name = "trader"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.66.0,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "markdown (>=3.10,<4.0)",
    "weasyprint (>=67.0,<68.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
